tests/type_errors/total_records_to_big.sy
mod A

def f
  : { a : Int } -> Int
  : { b } = b

